# Django_2f_auth

./: .gitignore  pyproject.toml
project/: .env.example  .flake8  manage.py
project/Django_2fauth/: urls.py  wsgi.py
project/Django_2fauth/settings/: __init__.py  django.py  environment.py  logging.py
project/Django_2fauth/settings/contrib/: __init__.py  expire_token.py  rest_framework.py  swagger.py
project/apps/accounts/: apps.py
project/apps/accounts/api/v1/: urls.py
project/apps/accounts/api/v1/serializers/: register.py  users.py
project/apps/accounts/api/v1/views/: email_activate.py  login.py  register.py  totp.py
project/apps/accounts/services/: auth_.py
project/apps/core/: admin.py  models.py  permissions.py
project/apps/core/migrations/: 0001_initial.py  0002_user_is_new_user.py
